Bug 1831535 - Fix nsTreeBodyFrame invalidation on height changes. r=layout-reviewers,dlrobertson

The previous code ran right before setting mRect so it triggered a
reflow callback / scrollbar update.

Differential Revision: https://phabricator.services.mozilla.com/D177258